--- a/Energy.App.Standalone/_Imports.razor
+++ b/Energy.App.Standalone/_Imports.razor
@@ -14,3 +14,8 @@
 @using MudBlazor
 @using Fluxor
 @using Fluxor.Blazor.Web.Components
+@using Energy.App.Standalone.Data
+@using Energy.App.Standalone.Features.Setup.Store
+@using Energy.App.Standalone.Features.Weather.Store
+@using Energy.App.Standalone.Models.Tariffs
+@using Energy.App.Standalone.Extensions
