--- a/Energy.App.Standalone/_Imports.razor
+++ b/Energy.App.Standalone/_Imports.razor
@@ -7,14 +7,17 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Energy.App.Standalone
+@using Energy.App.Standalone.Data
+@using Energy.App.Standalone.Data.EnergyReadings
+@using Energy.App.Standalone.Data.EnergyReadings.Interfaces
 @using Energy.App.Standalone.Shared
 @using Energy.App.Standalone.Models
 @using Energy.App.Standalone.PageComponents
+@using Energy.Shared;
 @using Microsoft.AspNetCore.Components
 @using MudBlazor
 @using Fluxor
 @using Fluxor.Blazor.Web.Components
-@using Energy.App.Standalone.Data
 @using Energy.App.Standalone.Features.Setup.Store
 @using Energy.App.Standalone.Features.Weather.Store
 @using Energy.App.Standalone.Models.Tariffs
