--- a/Energy.App.Standalone/App.razor
+++ b/Energy.App.Standalone/App.razor
@@ -1,4 +1,5 @@
-﻿<Fluxor.Blazor.Web.StoreInitializer />
+﻿
+<Fluxor.Blazor.Web.StoreInitializer />
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
