Handle adding updating tariffs

--- a/Energy.App.Standalone/Features/Setup/Pages/EditTariffForm.razor
+++ b/Energy.App.Standalone/Features/Setup/Pages/EditTariffForm.razor
@@ -1,7 +1,4 @@
-﻿@inherits FluxorComponent
-@inject IState<GasTariffsState> GasTariffState
-@inject IState<ElectricityTariffsState> ElectricityTariffState
-@using Energy.App.Standalone.Models
+﻿@using Energy.App.Standalone.Models
 
 <EditForm Model="_tariffDetail" OnValidSubmit="OnValidTariffSubmit">
 
