--- a/Energy.App.Standalone/Features/Setup/Pages/MeterTariffsTable.razor
+++ b/Energy.App.Standalone/Features/Setup/Pages/MeterTariffsTable.razor
@@ -1,7 +1,7 @@
-﻿@inherits FluxorComponent
+﻿@implements IDisposable
 @inject IState<GasTariffsState> GasTariffState
 @inject IState<ElectricityTariffsState> ElectricityTariffState
-
+@inject IDispatcher Dispatcher
 @using Energy.App.Standalone.Features.Setup.Store.ImmutatableStateObjects;
 @using Energy.App.Standalone.Models
 @using LabelPosition = MudBlazor.LabelPosition
@@ -125,6 +125,14 @@
 
     TariffDetail _addEditTariffDetail;
 
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        ElectricityTariffState.StateChanged += HandleStateChanged;
+        GasTariffState.StateChanged += HandleStateChanged;
+
+    }
+
     private record TariffDetailRow
     {
         public DateTime? DateAppliesFrom { get; set; }
@@ -144,10 +152,10 @@
         switch (MeterType)
         {
             case MeterType.Gas:
-                _tariffDetailState = GasTariffState.Value.TariffDetails;
+                _tariffDetailState = GasTariffState.Value.TariffDetails.ToList();
                 break;
             case MeterType.Electricity:
-                _tariffDetailState = ElectricityTariffState.Value.TariffDetails;
+                _tariffDetailState = ElectricityTariffState.Value.TariffDetails.ToList();
                 break;
             default:
                 throw new ArgumentOutOfRangeException();
@@ -185,7 +193,7 @@
             {
                 GlobalId = c.GlobalId,
                 IsHourOfDayFixed = c.IsHourOfDayFixed,
-                HourOfDayPrices = c.HourOfDayPrices.eMapToHourOfDayPrice(),
+                HourOfDayPrices = c.HourOfDayPrices.eMapToHourOfDayPriceDto(),
                 PencePerKWh = c.PencePerKWh,
                 DailyStandingChargePence = c.DailyStandingChargePence,
                 DateAppliesFrom = c.DateAppliesFrom,
@@ -204,13 +212,50 @@
 
     private async Task TariffSubmitted(TariffDetail tariffDetail)
     {
-        // Dispatch 
-        await MeterState.SetMeter(meter);
-        _meter = meter;
+        if (_adding)
+        {
+            switch (MeterType)
+            {
+                case MeterType.Gas:
+                    Dispatcher.Dispatch(new GasAddTariffAction(tariffDetail));
+                    break;
+                case MeterType.Electricity:
+                    Dispatcher.Dispatch(new ElectricityAddTariffAction(tariffDetail));
+                    break;
+                default:
+                    throw new ArgumentOutOfRangeException();
+            }
+        } 
+        else
+        {
+            switch (MeterType)
+            {
+                case MeterType.Gas:
+                    Dispatcher.Dispatch(new GasUpdateTariffAction(tariffDetail));
+                    break;
+                case MeterType.Electricity:
+                    Dispatcher.Dispatch(new ElectricityUpdateTariffAction(tariffDetail));
+                    break;
+                default:
+                    throw new ArgumentOutOfRangeException();
+            }
+        }
+
+
         SetTariffDetailRows();
         _addEditTariffDetail = null;
         _showEditDialogue = false;
     }
+
+    public void Dispose() 
+    {
+        GasTariffState.StateChanged -= HandleStateChanged;
+        ElectricityTariffState.StateChanged -= HandleStateChanged;
+
+    }
+
+    private void HandleStateChanged(object sender, EventArgs e) => InvokeAsync(StateHasChanged);
+
 
 }
 
