--- a/Energy.App.Standalone/Features/Setup/Pages/MeterAuthorization.razor
+++ b/Energy.App.Standalone/Features/Setup/Pages/MeterAuthorization.razor
@@ -1,4 +1,5 @@
 ﻿@page "/MeterAuthorization/{MeterTypeText}"
+@using Energy.App.Standalone.Features.EnergyReadings.Store;
 @inherits FluxorComponent
 @inject IState<MeterSetupState> MeterSetupState
 @inject IState<HouseholdState> HouseholdState
