--- a/Energy.App.Standalone/_Imports.razor
+++ b/Energy.App.Standalone/_Imports.razor
@@ -22,3 +22,7 @@
 @using Energy.App.Standalone.Features.Weather.Store
 @using Energy.App.Standalone.Models.Tariffs
 @using Energy.App.Standalone.Extensions
+@using MathNet.Numerics
+@using Energy.App.Standalone.Features.Analysis.Store;
+@using Energy.App.Standalone.Features.Analysis.Services.Analysis.Models;
+
