--- a/Energy.App.Standalone/App.razor
+++ b/Energy.App.Standalone/App.razor
@@ -1,4 +1,5 @@
-﻿
+﻿@using Energy.App.Standalone.Features;
+
 <Fluxor.Blazor.Web.StoreInitializer />
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
@@ -12,3 +13,4 @@
         </LayoutView>
     </NotFound>
 </Router>
+
